Fix modal z-index.

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -140,7 +140,8 @@ $menu-item-hover-bg: $shade-1;
 //
 
 $zindex-select-menu: 1000;
-$zindex-messages:    1010;
+$zindex-modal:       1010;
+$zindex-messages:    1020;
 
 
 //
